@@ -31,15 +31,16 @@ G_BEGIN_DECLS
 
 typedef struct _IgeMacMenuGroup IgeMacMenuGroup;
 
-void             ige_mac_menu_set_menu_bar                   (GtkMenuShell    *menu_shell);
-void             ige_mac_menu_set_quit_menu_item             (GtkMenuItem     *menu_item);
-IgeMacMenuGroup *ige_mac_menu_add_app_menu_group             (void);
-void             ige_mac_menu_add_app_menu_item              (IgeMacMenuGroup *group,
-                                                              GtkMenuItem     *menu_item,
-                                                              const gchar     *label);
-gboolean         ige_mac_menu_handle_menu_event              (GdkEventKey     *event);
-void             ige_mac_menu_set_global_key_handler_enabled (gboolean         enabled);
-void             ige_mac_menu_connect_window_key_handler     (GtkWindow       *window);
+void ige_mac_menu_set_menu_bar (GtkMenuShell *menu_shell);
+void ige_mac_menu_set_quit_menu_item (GtkMenuItem *menu_item);
+IgeMacMenuGroup *ige_mac_menu_add_app_menu_group (void);
+void ige_mac_menu_add_app_menu_item (IgeMacMenuGroup *group, 
+				     GtkMenuItem *menu_item, 
+				     const gchar *label);
+void ige_mac_menu_sync (GtkMenuShell *menu_shell);
+gboolean ige_mac_menu_handle_menu_event (GdkEventKey *event);
+void ige_mac_menu_set_global_key_handler_enabled (gboolean enabled);
+void ige_mac_menu_connect_window_key_handler (GtkWindow *window);
 
 G_END_DECLS
 
